--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 <body>
    
     <header>
+        <!-- The navigation section element start here  -->
+        <section class="first-section">
+            <nav class="nav-bar">
+                <h4 class="nav-title">MO<span style="color:red;">H</span>SIN</h4>
+                <ul><li>
+                    <button class="button-primary"> Download Resume</button>
+                </li></ul>
+           
+            </nav>
+            <!-- The navigation section element end here  -->
         <section class="header-section-style">
             <img  src="assets/Group.png" alt="">
             <h2 class="header-section-content-title">"In the near future, I hope to become a Developer." </h2>
@@ -80,14 +90,14 @@
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
                     <a href="">Learn more</a>
                 </div>
-                <div>
-                <img src="assets/css.png" alt="">
+                <div class="target-2">
+                <img class="img-2" src="assets/css.png" alt="">
                 <p>Lorem Ipsum is simply dummy text of the printing.</p>
                     <a href="">Learn more</a>
 
                 </div>
-                <div>
-                <img src="assets/js.png" alt="">
+                <div class="target-3">
+                <img class="img-3" src="assets/js.png" alt="">
                 <p>Lorem Ipsum is simply dummy text of the printing.</p>
                     <a href="">Learn more</a>
 
