--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
                         <div class="iwillcode-section-text">
-                            <h3 class="iwillcode-section-text-title">I will Do Coding and Change The World</h3>
+                            <h3 class="iwillcode-section-text-title">I will Do Coding and Change The<br> World</h3>
                             <p iwillcode-section-description>There is a world of possibilities that come from knowing
                                 how to code. How do you open that door? We explain in this comprehensive guide on how to
                                 learn to code.</p>
