maybe i am dying

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                     9:00 A.M and 8.00 P.M ET, Monday through Friday</p>
                 <div>
                     <a href="https://www.facebook.com/profile.php?id=100080363381346&mibextid=ZbWKwL"><img
-                            src="images/icons/facebook.png" alt=""></a>
+                            src="assets/facebook.png" alt=""></a>
                     <a
                         href="https://www.linkedin.com/in/mohsin-alam-173534317?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img
                             src="assets/linkedin-icon 1.png" alt=""></a>
-                    <a href=""><img src="assets/facebook.png" alt=""></a>
+                    <a href="https://github.com/mohsyn007"><img src="assets/icons8-github-48.png" alt=""></a>
                 </div>
             </div>
             <div class="footer-column">
