--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <div class="target-3">
                     <img class="img-3" src="assets/js.png" alt="">
                     <h4 class="target-title-1">JavaScript</h4>
-                    <p class="target-des-1">JavaScript is the world's most popular programming language.</p>
-                    <a class="target-link-1" href="https://www.w3schools.com/js/">Learn more</a>
+                    <p class="target-des-1">JavaScript is the world's most popular programming .</p>
+                    <a class="target-link-1" href="https://www.w3schools.com/js/"> Learn more</a>
 
                 </div>
             </div>
